# scraping_to_excel

./: README.md  pyproject.toml
app/: main.py  scraping.py
app/utils/: async_patchright.py  captcha.py
